--- a/style.css
+++ b/style.css
@@ -18,13 +18,14 @@
 .border{
     background-color: red;
     padding: 30px;
+    flex-grow: 0;
     
 }
 
 .container{
     display: flex;
     flex-wrap: wrap;
-    max-width: 800px;
+    max-width: 1500px;
     height: auto;
     margin: 0 auto;
     
