--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@
 .container{
     display: flex;
     flex-wrap: wrap;
-    max-width: 1500px;
-    height: auto;
-    margin: 0 auto;
+    margin: 10px auto;
+    height: 500px;
+    width: 500px;
     
 }
 
